--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -134,3 +134,7 @@
   background: transparent;
   margin-bottom: 1em;
 }
+
+.signup-cta {
+  margin: 0;
+}
